# web-boilerplate

./: LICENSE  README.md
backend/: .env  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: config.rs  jobs.rs  main.rs  state.rs
backend/api/src/routes/: login.rs  mod.rs  signup.rs
backend/migration/src/: lib.rs  m20230825_070039_create_tables.rs
backend/service/: Cargo.toml
backend/service/src/: config.rs  error.rs  lib.rs  util.rs
backend/service/src/action/: session.rs  user.rs
backend/service/src/crypto/: password.rs  token.rs
backend/service/src/entity/: mod.rs  password_auth.rs  session.rs  user.rs
