[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt"] }

axum = "0.6"

serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }

argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }

tracing = "0.1"

[dependencies.sea-orm]
version = "0.12"
default-features = false
features = ["macros", "with-time"]
